@@ -35,7 +35,8 @@ jvmOptions="-Dfile.encoding=UTF-8 \
     --add-exports javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED \
     --add-exports jdk.crypto.cryptoki/sun.security.pkcs11.wrapper=ALL-UNNAMED \
     --add-opens java.base/java.security=ALL-UNNAMED \
-    --add-opens jdk.crypto.cryptoki/sun.security.pkcs11=ALL-UNNAMED"
+    --add-opens jdk.crypto.cryptoki/sun.security.pkcs11=ALL-UNNAMED \
+    --enable-native-access=javafx.graphics"
     
 arguments=(
     "--input" "${appDirectory}"
